typo in warwick talk

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,7 +76,7 @@
               <a href='http://www.ccpnc.ac.uk/smarter4'>SMARTER4</a>, University of Durham, 3<sup>rd</sup> September 2014.
             </li>
             <li>
-              <strong>Calculating J Couplings with Ultrasoft Potentials and Relativtistic Effects</strong><br/>
+              <strong>Calculating J-couplings with Ultrasoft Potentials and Relativistic Effects</strong><br/>
               <a href='http://www2.warwick.ac.uk/fac/sci/physics/research/condensedmatt/nmr/conference_january2014/'>NMR Crystallography: Combining Experiment and Calculation</a>, University of Warwick, 14<sup>th</sup> January 2014.
             </li>
           </ul>
