--- a/css/main.css
+++ b/css/main.css
@@ -1,118 +1,90 @@
 body {
-  margin-top:50px; 
-  font-family: "Droid Sans", sans-serif;
-}
+  margin-top: 50px;
+  font-family: "Droid Sans", sans-serif; }
 
-a:link {
-  text-decoration:underline;
-}
+.container {
+  min-height: 768px; }
+
+a {
+  color: #428bca; }
+  a:visited {
+    text-decoration: underline; }
+  a:hover {
+    color: #245682;
+    text-decoration: underline; }
+  a:link {
+    text-decoration: underline; }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Droid Sans", sans-serif;
-}
+  font-family: "Droid Sans", sans-serif; }
 
 h1 {
-  font-weight:bold;
-}
+  font-weight: bold; }
 
 p, address {
-  font-family: "Droid Serif", serif;
-}
+  font-family: "Droid Serif", serif; }
 
 article p {
-  text-align:justify;
-}
+  text-align: justify; }
 
 ul.github {
-  list-style:none;
-  padding:0;
-}
-
-ul.github li {
-  margin:10px;
-}
-
-ul.github li a.link {
-  margin-bottom:5px;
-  padding:10px;
-  border:1px solid #eee;
-  display:block;
-  background:#DFEDFF;
-}
+  list-style: none;
+  padding: 0; }
+  ul.github li {
+    margin: 10px; }
+    ul.github li a.link {
+      margin-bottom: 5px;
+      padding: 10px;
+      border: 1px solid #eee;
+      display: block;
+      background: #DFEDFF; }
 
 img.my_face {
-  border-radius:100px;
-}
+  border-radius: 100px; }
 
 p.block-highlight {
   background: #EBEBEB;
   color: #003;
-  padding:10px;
-  border-radius:5px;
-}
+  padding: 10px;
+  border-radius: 5px; }
 
 ul.publications {
-  list-style:none;
-  padding:0;
-}
-
-ul.publications li {
-  margin-bottom:5px;
-  font-size:0.9em;
-}
+  list-style: none;
+  padding: 0; }
+  ul.publications li {
+    margin-bottom: 5px;
+    font-size: 0.9em; }
 
 div.logotype {
-  line-height:40px;
-}
-
-div.logotype p {  
-  font-size:40px;
-  padding:0;
-  margin:0;
-  font-family: "Droid Sans", sans-serif;
-  font-weight:bold;
-}
-
-div.logotype p a:link,
-div.logotype p a:visited {
-  color:black;
-  text-decoration:none;
-}
-
-div.logotype img {
-  height:40px;
-}
-
-div.sidebar {
-}
+  line-height: 40px; }
+  div.logotype p {
+    font-size: 40px;
+    padding: 0;
+    margin: 0;
+    font-family: "Droid Sans", sans-serif;
+    font-weight: bold; }
+    div.logotype p a:link, div.logotype p a:visited {
+      color: black;
+      text-decoration: none; }
+  div.logotype img {
+    height: 40px; }
 
 img.thesis_front {
-  border:1px solid #eee;
-  box-shadow: 2px 2px 1px #dddddd;
-}
+  border: 1px solid #eee;
+  box-shadow: 2px 2px 1px #dddddd; }
 
-/* Footer */
 .footer {
-  margin-top:50px;
-  background:#333;
-  color:white;
-  font-family: "Droid Sans", sans-serif;
-}
-
-.footer-left {
-  padding-top:20px;
-  padding-bottom:100px;
-  text-align:right;
-}
-
-.footer-right {
-  padding-top:20px;
-  padding-bottom:100px;
-  text-align:left;
-}
-
-
-.footer a:link, .footer a:visited {
-  color:white;
-}
-
+  margin-top: 50px;
+  background: #333;
+  color: white;
+  font-family: "Droid Sans", sans-serif; }
+  .footer .footer-left {
+    padding-top: 20px;
+    padding-bottom: 100px;
+    text-align: right; }
+  .footer .footer-right {
+    padding-top: 20px;
+    padding-bottom: 100px;
+    text-align: left; }
+  .footer a:link, .footer a:visited {
+    color: white; }
