--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <link href='/fonts/droid_sans.css' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/syntax.css" />
   </head>
   <body>
     {{ content }}
