potential hung loading fix?

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -22,7 +22,7 @@ h3 {
   <div style='clear:both;'></div>
 </div>
 
-<div style="background:url('/images/magres_header.png');padding:1em;height:15em;margin-bottom:2em;">
+<div style="background:url('/images/magres_heder.png');padding:1em;height:15em;margin-bottom:2em;">
 </div>
 
 <div class="container">
