reworked css stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <link href='/fonts/droid_serif.css' rel='stylesheet' type='text/css'>
     <link href='/fonts/droid_sans.css' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/{{ page.css }}" />
     <link rel="stylesheet" href="/css/syntax.css" />
   </head>
   <body>
