--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -1,29 +1,15 @@
 ---
 layout: default
+css: magres.css
 ---
 
-<style>
-body {
-  margin-top:0; 
-}
+<div class="top-bar"><div class="inner">
+  <a href='/'>Tim Green</a> / MagresPython
+</div></div>
 
-h1 {
-  margin-top:0;
-}
-
-h3 {
-  margin-top:0;
-}
-</style>
-
-<div style="background:#2a3836;padding:0.25em;">
-      <!--<img src='/images/my_face.jpg' class='my_face' style='float:left;'/>-->
-  <a href='/' style='color:white;float:right;text-decoration:none;'>Tim Green</a>
-  <div style='clear:both;'></div>
-</div>
-
-<div style="background:url('/images/magres_heder.png');padding:1em;height:15em;margin-bottom:2em;">
-</div>
+<div class="magres_heder"><div class="inner">
+<h1>The MagresPython library</h1>
+</div></div>
 
 <div class="container">
   <div class="row">
