--- a/css/magres.scss
+++ b/css/magres.scss
@@ -36,7 +36,7 @@ h3 {
 }
 
 .magres_heder {
-  /*background:url('/images/magres_heder.png');*/
+  background:url('/images/magres_heder.png');
   background-color: #C53B3B;
   padding:1em;
   height:15em;
