colours and copy

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -8,7 +8,7 @@ css: magres.css
 </div></div>
 
 <div class="magres_heder"><div class="inner">
-<h1>The MagresPython library</h1>
+<h1>The MagresPython library <a href='/magres-python/install/' style='float:right;' class='btn btn-default'>install</a></h1>
 </div></div>
 
 <div class="container">
@@ -16,9 +16,9 @@ css: magres.css
     <div class="col-md-3 sidebar">
         <h3>Documentation</h3>
         <ul>
-          <li><a href='/magres-python/'>Introduction</a></li>
-          <li><a href='/magres-python/install/'>Installation</a></li> 
-          <li><a href='/magres-python/scripts/'>Scripts</a></li> 
+          <li><a class='link' href='/magres-python/'>Introduction</a></li>
+          <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
+          <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li> 
         </ul>
 
         <p><a href='https://github.com/tfgg/magres-format'>Available on Github</a>.</p>
