--- a/css/magres.scss
+++ b/css/magres.scss
@@ -1,15 +1,48 @@
 @import "default.scss";
 
+$color_highlight: #C53B3B;
+
 body {
   margin-top:0; 
 }
 
-h1 {
-  margin-top:0;
+a {
+  color: darken($color_highlight, 15%);
+
+  &:visited {
+    color: darken($color_highlight, 10%);
+  }
+
+  &:link {
+    color: darken($color_highlight, 15%);
+  }
 }
 
-h3 {
-  margin-top:0;
+.sidebar {
+  h1 {
+    margin-top:0;
+  }
+
+  h3 {
+    margin-top:0;
+  }
+
+  ul {
+    list-style:none;
+    padding:0;
+
+    li {
+      margin:10px;
+
+      a.link {
+        margin-bottom: 5px;
+        padding: 10px;
+        border: 1px solid #eee;
+        display: block;
+        background: lighten($color_highlight, 40%);
+      }
+    }
+  }
 }
 
 .top-bar {
@@ -37,7 +70,7 @@ h3 {
 
 .magres_heder {
   background:url('/images/magres_heder.png');
-  background-color: #C53B3B;
+  background-color: $color_highlight;
   padding:1em;
   height:15em;
   margin-bottom:2em;
@@ -51,6 +84,7 @@ h3 {
     h1 {
       margin-top: 3.9em;
       margin-left: 25%;
+      margin-right: 25%;
     }
   }
 }
