clean up nav more

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -14,7 +14,7 @@ css: magres.css
 <div class="container">
   <div class="row">
     <div class="col-md-3 sidebar">
-        <h3>Documentation</h3>
+        <!--<h3>Documentation</h3>-->
         <ul>
           <li><a class='link' href='/magres-python/'>Introduction</a></li>
           <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
@@ -24,7 +24,7 @@ css: magres.css
         <p><a href='https://github.com/tfgg/magres-format'>Available on Github</a>.</p>
         
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 content">
       {{ content }}
     </div>
     <div class="col-md-3">
