tweak magres nav bar

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -19,10 +19,8 @@ css: magres.css
           <li><a class='link' href='/magres-python/'>Introduction</a></li>
           <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
           <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li> 
+          <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
         </ul>
-
-        <p><a href='https://github.com/tfgg/magres-format'>Available on Github</a>.</p>
-        
       </div>
       <div class="col-md-6 content">
       {{ content }}
