structural tutorial, generated from notebook

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -7,8 +7,11 @@ css: magres.css
   <a href='/'>Tim Green</a> / MagresPython
 </div></div>
 
-<div class="magres_heder"><div class="inner">
-<h1>The MagresPython library <a href='/magres-python/install/' style='float:right;' class='btn btn-default'>install</a></h1>
+<div class="magres_heder"><div class="container">
+<div class="col-md-6 col-md-offset-3 inner">
+<!--<a href='/magres-python/install/' class='btn btn-default'>install</a>-->
+<h1>The MagresPython library</h1>
+</div>
 </div></div>
 
 <div class="container">
