--- a/css/magres.scss
+++ b/css/magres.scss
@@ -96,20 +96,24 @@ a {
 .magres_heder {
   background:url('/images/magres_heder.png');
   background-color: $color_highlight;
-  padding:1em;
-  height:15em;
-  margin-bottom:2em;
+  padding:10px;
+  margin-bottom:20px;
   color:white;
 
   .inner {
-    width:1170px;
-    margin:auto;
-    vertical-align:bottom;
-    
     h1 {
-      margin-top: 3.9em;
-      margin-left: 25%;
-      margin-right: 25%;
+      margin-top: 120px;
+      font-size:40px;
+      line-height:50px;
     }
   }
+}
+
+code[data-lang="text"]:parent {
+  background:none;
+  border:0;
+}
+
+.stream pre {
+  background: none;
 }
