add structural tutorial to nav

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -22,6 +22,7 @@ css: magres.css
           <li><a class='link' href='/magres-python/'>Introduction</a></li>
           <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
           <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li> 
+          <li><a class='link' href='/magres-python/tutorials/structural/'>Structural properties</a></li> 
           <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
         </ul>
       </div>
