Add disordered tutorial. Improve scripts intro

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -21,8 +21,19 @@ css: magres.css
         <ul>
           <li><a class='link' href='/magres-python/'>Introduction</a></li>
           <li><a class='link' href='/magres-python/install/'>Installation</a></li> 
-          <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li> 
-          <li><a class='link' href='/magres-python/tutorials/structural/'>Structural properties</a></li> 
+          <li><a class='link' href='/magres-python/scripts/'>Scripts</a></li>
+          <li class='group'>Tutorials
+            <ul>
+              <!--<li><a class='link' href='/magres-python/tutorials/introduction/'>Introduction</a></li>-->
+              <!--<li><a class='link' href='/magres-python/tutorials/atoms/'>Atoms</a></li>-->
+              <li><a class='link' href='/magres-python/tutorials/structural/'>Distances and angles</a></li>
+              <!--<li><a class='link' href='/magres-python/tutorials/bonding/'>Bonding</a></li>
+              <li><a class='link' href='/magres-python/tutorials/cs/'>Chemical shifts</a></li>
+              <li><a class='link' href='/magres-python/tutorials/efg/'>Electric field gradients</a></li>
+              <li><a class='link' href='/magres-python/tutorials/jc/'>J-coupling</a></li>
+              <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>-->
+            </ul>
+          </li>
           <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
         </ul>
       </div>
