mathjax and working links

--- a/_layouts/page_magres.html
+++ b/_layouts/page_magres.html
@@ -3,6 +3,16 @@ layout: default
 css: magres.css
 ---
 
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+  });
+</script>
+
+<script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
 <div class="top-bar"><div class="inner">
   <a href='/'>Tim Green</a> / MagresPython
 </div></div>
@@ -30,8 +40,8 @@ css: magres.css
               <!--<li><a class='link' href='/magres-python/tutorials/bonding/'>Bonding</a></li>
               <li><a class='link' href='/magres-python/tutorials/cs/'>Chemical shifts</a></li>
               <li><a class='link' href='/magres-python/tutorials/efg/'>Electric field gradients</a></li>
-              <li><a class='link' href='/magres-python/tutorials/jc/'>J-coupling</a></li>
-              <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>-->
+              <li><a class='link' href='/magres-python/tutorials/jc/'>J-coupling</a></li>-->
+              <li><a class='link' href='/magres-python/tutorials/disordered/'>Disordered systems</a></li>
             </ul>
           </li>
           <li><a class='external' href='https://github.com/tfgg/magres-format'>Available on Github</a></li>
