--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,14 @@ ul.publications {
     margin-bottom: 20px;
     font-size: 1.0em; }
 
+.col-right {
+  text-align: center; }
+  .col-right address {
+    text-align: right;
+    border: 1px solid #eee;
+    display: inline-block;
+    padding: 10px; }
+
 div.logotype {
   line-height: 40px; }
   div.logotype p {
