--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,17 @@ ul.publications {
   }
 }
 
+.col-right {
+  text-align: center;
+
+  address {
+    text-align: right;
+    border: 1px solid #eee;
+    display: inline-block;
+    padding: 10px
+  }
+}
+
 div.logotype {
   line-height:40px;
 
