Redesign front page

--- a/css/colours.scss
+++ b/css/colours.scss
@@ -1,4 +1,4 @@
-$header_font: "Droid Sans", sans-serif;
+$header_font: "Helvetica", sans-serif;
 $body_font: "Droid Serif", serif;
 
 $blue: #428bca;
