--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,9 +6,8 @@ css: main.css
 <div class="container">
   <div class="row">
     <div class="col-md-3 sidebar">
-      <div class='logotype'>
-      <img src='/images/my_face.jpg' class='my_face' style='float:left;'/>
-      <p><a href='/'>Tim Green</a></p>
+      <div class='logoface_small'>
+      <img src='/images/my_face.jpg' class='my_face'/> Tim Green
       </div>
 
       </ul>
