--- a/css/default.scss
+++ b/css/default.scss
@@ -42,14 +42,26 @@ a {
 
 h1, h2, h3, h4, h5 {
   font-family: $header_font;
+  font-weight: 300;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
 }
 
-h1 {
-  font-weight:bold;
+h1:first-child {
+  margin-top: 0em;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 p, address {
   font-family: $body_font;
+  line-height: 2em;
 }
 
 article {
