--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,21 @@ body {
 .container {
   min-height: 768px; }
 
+ul#leftnav {
+  margin: 0;
+  margin-top: 2em;
+  padding: 0;
+  list-style: none; }
+  ul#leftnav li a:link {
+    display: block;
+    padding: 1em;
+    background: #E0F0FA;
+    border-radius: 5px;
+    color: #517DA3;
+    text-decoration: none;
+    text-align: center;
+    margin-bottom: 1em; }
+
 ul.links {
   padding: 0;
   margin: 0;
