--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,26 @@ body {
   min-height:768px;
 }
 
+ul#leftnav {
+    margin: 0;
+    margin-top: 2em;
+    padding: 0;
+    list-style: none;
+
+    li {
+        a:link {
+            display: block;
+            padding: 1em;
+            background: #E0F0FA;
+            border-radius: 5px;
+            color: #517DA3;
+            text-decoration: none;
+            text-align: center;
+            margin-bottom: 1em;
+        }
+    }
+}
+
 ul.links {
   padding:0;
   margin: 0;
