add dumb looking favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="/css/{{ page.css }}" />
     <link rel="stylesheet" href="/css/syntax.css" />
+
+    <link rel="shortcut icon" type="image/png" href="/images/my_face.jpg"/>
   </head>
   <body>
 <!-- Google Tag Manager -->
