--- a/css/default.css
+++ b/css/default.css
@@ -25,7 +25,9 @@ a {
     text-decoration: underline; }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Droid Sans", sans-serif; }
+  font-family: "Droid Sans", sans-serif; 
+  text-rendering: geometricPrecision;
+}
 
 h1 {
   font-weight: bold; }
