--- a/css/default.scss
+++ b/css/default.scss
@@ -45,6 +45,7 @@ h1, h2, h3, h4, h5 {
   font-weight: 300;
   margin-top: 1.5em;
   margin-bottom: 0.5em;
+  text-rendering: geometricPrecision;
 }
 
 h1:first-child {
