--- a/css/colours.scss
+++ b/css/colours.scss
@@ -1,5 +1,5 @@
-$header_font: "Helvetica", sans-serif;
-$body_font: "Droid Serif", serif;
+$body_font: "Helvetica", sans-serif;
+$header_font: "Roboto Slab", serif;
 
 $blue: #428bca;
 
