--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>-->
     <link href='/fonts/droid_serif.css' rel='stylesheet' type='text/css'>
     <link href='/fonts/droid_sans.css' rel='stylesheet' type='text/css'>
+    <link href='/fonts/roboto_slab.css' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="/css/{{ page.css }}" />
     <link rel="stylesheet" href="/css/syntax.css" />
