--- a/css/main.scss
+++ b/css/main.scss
@@ -157,6 +157,7 @@ img.thesis_front {
 div.post {
     h1 {
         border-bottom: 4px solid #FF0064;
+        margin-bottom: 4rem;
     }
 
     h1, h2, h3, h4, h5, p, ul, table {
