--- a/css/default.scss
+++ b/css/default.scss
@@ -6,6 +6,10 @@
   color:white;
   font-family: $header_font;
 
+  p {
+    margin-bottom: 0.5rem;
+  }
+
   .footer-left {
     padding-top:20px;
     padding-bottom:100px;
