--- a/css/main.css
+++ b/css/main.css
@@ -169,9 +169,10 @@ img.thesis_front {
 div.post h1 {
   border-bottom: 4px solid #FF0064;
   margin-bottom: 4rem; }
-div.post h1, div.post h2, div.post h3, div.post h4, div.post h5, div.post p, div.post ul, div.post table, div.post div.highlight {
-  width: 70%;
-  margin-left: 5%; }
+@media (min-width: 1000px) {
+  div.post h1, div.post h2, div.post h3, div.post h4, div.post h5, div.post p, div.post ul, div.post table, div.post div.highlight {
+    width: 70%;
+    margin-left: 5%; } }
 div.post table {
   border-collapse: collapse;
   margin-top: 1.5rem;
