--- a/css/main.scss
+++ b/css/main.scss
@@ -160,9 +160,11 @@ div.post {
         margin-bottom: 4rem;
     }
 
-    h1, h2, h3, h4, h5, p, ul, table, div.highlight {
-        width: 70%;
-        margin-left: 5%;
+    @media (min-width: 1000px) {
+        h1, h2, h3, h4, h5, p, ul, table, div.highlight {
+            width: 70%;
+            margin-left: 5%;
+        }
     }
 
     table {
